--- a/src/app/etudiants/form-etudiant/form-etudiant.component.html
+++ b/src/app/etudiants/form-etudiant/form-etudiant.component.html
@@ -1,30 +1,66 @@
-<h1> {{action}} Etudiant</h1>
-<form style="padding-left: 250;"#f="ngForm">
+<h1>{{ action }} Etudiant</h1>
+<form #f="ngForm" style="padding-left: 250px">
   <div class="form-group col-md-6">
     <label>Nom</label>
-    <input [(ngModel)]="etudiant.nomE" type="text" name="nomE" class="form-control" 
-    required minlength="3" pattern="[a-zA-Z]{3,12}$"
-    #t="ngModel">
-   <div class="alert alert-danger" *ngIf="t.invalid && t.touched">
-       <div *ngIf="t.hasError('required')">this field is required</div>
-       <div *ngIf="t.hasError('minlength')">minlength = 3!</div>
-       <div *ngIf="t.hasError('pattern')">error pattern</div>
-  </div>
+    <input
+      [(ngModel)]="etudiant.nomE"
+      type="text"
+      name="nomE"
+      class="form-control"
+      required
+      minlength="3"
+      pattern="[a-zA-Z]{3,12}$"
+      #t="ngModel"
+    />
+    <div class="alert alert-danger" *ngIf="t.invalid && t.touched">
+      <div *ngIf="t.hasError('required')">this field is required</div>
+      <div *ngIf="t.hasError('minlength')">minlength = 3!</div>
+      <div *ngIf="t.hasError('pattern')">error pattern</div>
+    </div>
   </div>
   <div class="form-group col-md-6">
-  <label>Prenom</label>
-  <input [(ngModel)]="etudiant.prenomE" type="text" name="prenomE" class="form-control" 
-  required minlength="3" pattern="[a-zA-Z]{3,12}$"
-  #p="ngModel">
- <div class="alert alert-danger" *ngIf="p.invalid && p.touched">
-     <div *ngIf="p.hasError('required')">this field is required</div>
-     <div *ngIf="p.hasError('minlength')">minlength = 3!</div>
-     <div *ngIf="p.hasError('pattern')">error pattern</div>
-</div>
-</div>
+    <label>Prenom</label>
+    <input
+      [(ngModel)]="etudiant.prenomE"
+      type="text"
+      name="prenomE"
+      class="form-control"
+      required
+      minlength="3"
+      pattern="[a-zA-Z]{3,12}$"
+      #p="ngModel"
+    />
+    <div class="alert alert-danger" *ngIf="p.invalid && p.touched">
+      <div *ngIf="p.hasError('required')">this field is required</div>
+      <div *ngIf="p.hasError('minlength')">minlength = 3!</div>
+      <div *ngIf="p.hasError('pattern')">error pattern</div>
+    </div>
+  </div>
+  <div class="form-group col-md-6">
+    <label>Email</label>
+    <input
+      [(ngModel)]="etudiant.email"
+      type="text"
+      name="email"
+      class="form-control"
+      required
+      minlength="3"
+      #p="ngModel"
+    />
+    <div class="alert alert-danger" *ngIf="p.invalid && p.touched">
+      <div *ngIf="p.hasError('required')">this field is required</div>
+      <div *ngIf="p.hasError('minlength')">minlength = 3!</div>
+    </div>
+  </div>
   <div class="form-group col-md-6">
     <label>Option</label>
-    <select [(ngModel)]="etudiant.options" name="option" class="form-control" required #s="ngModel">
+    <select
+      [(ngModel)]="etudiant.option"
+      name="option"
+      class="form-control"
+      required
+      #s="ngModel"
+    >
       <option value="GAMIX">GAMIX</option>
       <option value="SE">SE</option>
       <option value="SIM">SIM</option>
@@ -32,15 +68,28 @@
     </select>
     <div class="alert alert-danger" *ngIf="s.invalid && s.touched">
       <div *ngIf="s.hasError('required')">This field is required</div>
+    </div>
   </div>
+  <div class="form-group col-md-6">
+    <label>genre</label>
+    <select
+      [(ngModel)]="etudiant.genre"
+      name="genre"
+      class="form-control"
+      required
+      #s="ngModel"
+    >
+      <option value="Homme">homme</option>
+      <option value="Femme">femme</option>
+    </select>
+    <div class="alert alert-danger" *ngIf="s.invalid && s.touched">
+      <div *ngIf="s.hasError('required')">This field is required</div>
+    </div>
   </div>
-  <br>
+  <br />
   <button class="btn btn-success" (click)="add()" [disabled]="f.invalid">
-    save
+    {{ action }}
   </button>
   &nbsp;
-  <button type="reset" class="btn btn-warning">
-    reset
-  </button>
+  <button type="reset" class="btn btn-warning">reset</button>
 </form>
-
