--- a/src/app/departments/list-department/list-department.component.html
+++ b/src/app/departments/list-department/list-department.component.html
@@ -1,10 +1,6 @@
 <div id="content" #content> 
   <h1>List Department</h1>
-  <div><select (change)="onTableSizeChange($event)">
-    <option *ngFor="let size of tableSizes">
-        {{size}}
-    </option>
-      </select></div>
+
 <!--   <input
   type="number"
   aria-labelledby="temperature low"
@@ -12,50 +8,49 @@
   [(ngModel)]="idDepart"
   (input)="recherche(idDepart)"
 /> -->
-<label for="keyword">Recherche</label>
 
-  <a class="btn btn-sm btn-warning" (click)="toadd()">
-      Add Department  
-  </a>
+
+<a class="btn btn-sm btn-warning" (click)="toadd()">
+    Add Department  
+</a>
   <table class="table">
       <thead>
           <tr>
              <th>ID</th>
               <th>Nom Department</th>
-         
+              <th>Code</th>
               <th>type</th>
-             <th>universite</th>
+           
               <th>description</th>
-    
+              <th>Universite</th>
+       
               <th>action</th>
           </tr>
       </thead>
       <tbody>
-          <tr *ngFor="let u of listdepartments | paginate
-          : {
-              itemsPerPage: tableSize,
-              currentPage: page,
-              totalItems: count
-            };
-      let i = index
-    ">
-              <td>{{u.idDepart}}</td>
-              <td>{{u.nomDepart }}</td>
+    
+          <tr *ngFor="let u of listDepartment ">
+    
+              <td>{{u?.idDepartement}}</td>
+              <td>{{u?.code }}</td>
+              <td>{{u?.nomDepartement }}</td>
              
-              <td [ngStyle]="{color: u.code=='Informatique' ? '#71BC75' : '#550F00' }"> {{u.type}} </td>
+              <td > {{u?.type}} </td>
               
-              <td>{{ u?.universites?.nomUni }}</td>
-              <td > {{u.description}}</td>
-              
+             
+              <td > {{u?.description}}</td>
+             
+                 
+              <td > {{u?.universite?.nomUniversite}}</td>
               <td>
-                  <button class="btn btn-sm btn-danger" (click)="deletedepartment(u.idDepart)" >
+                  <button class="btn btn-sm btn-danger" (click)="deletedepartment(u.idDepartement)" >
                       delete
                   </button>
-                  &nbsp;
-                  <a class="btn btn-sm btn-warning" (click)="updatedepartment(u.idDepart)">
-                      update  
-                  </a>
-
+                  &nbsp; 
+                  <a class="btn btn-sm btn-warning" (click)="getEtudiantdep()">
+                    Show  
+                </a> 
+                
                   <a class="btn btn-sm btn-warning" (click)=" exportToPDF()">
                     PDF  
                 </a>
@@ -64,12 +59,5 @@
           </tr>
       </tbody>
   </table>
-  <div>
-        <pagination-controls
-          previousLabel="prev"
-          nextLabel="next"
-          (pageChange)="onTableDataChange($event)"
-        >
-        </pagination-controls>
-      </div>
+ 
   </div>
