--- a/src/app/etudiants/list-etudiant/list-etudiant.component.html
+++ b/src/app/etudiants/list-etudiant/list-etudiant.component.html
@@ -1,33 +1,61 @@
-<div id="content" #content> 
-    <h1>List etudiants</h1>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nom</th>
-                <th>Prenom</th>
-                <th>Option</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let etudiant of etudiantList">
-                <td>{{etudiant.idEtudiant}}</td>
-                <td>{{etudiant.nomE}}</td>
-                <td> {{etudiant.prenomE}}
-                </td>
-                <td> {{etudiant.options}}
-                </td>
-                <td>
-                    <button class="btn btn-sm btn-danger" (click)="delete(etudiant.idEtudiant)" >
-                        Delete
-                    </button>
-                    &nbsp;
-                    <a class="btn btn-sm btn-warning" >
-                        Update  
-                    </a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    </div>
+<div id="content" #content>
+  <h1>List etudiants</h1>
+  <table class="table" id="excel-table">
+    <thead>
+      <tr>
+        <th>Id</th>
+        <th>Nom</th>
+        <th>Prenom</th>
+        <th>genre</th>
+        <th>email</th>
+        <th>Option</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let etudiant of etudiantList">
+        <td>{{ etudiant.idEtudiant }}</td>
+        <td>{{ etudiant.nomE }}</td>
+        <td>{{ etudiant.prenomE }}</td>
+        <td>{{ etudiant.genre }}</td>
+        <td>{{ etudiant.email }}</td>
+        <td>{{ etudiant.option }}</td>
+        <td>
+          <button
+            class="btn btn-sm btn-danger"
+            (click)="delete(etudiant.idEtudiant)"
+          >
+            Delete
+          </button>
+          <button
+            class="btn btn-sm btn-warning"
+            (click)="update(etudiant.idEtudiant)"
+          >
+            Update
+          </button>
+          <button
+            class="btn btn-sm btn-success"
+            (click)="sendMail(etudiant.idEtudiant)"
+          >
+            Send
+          </button>
+
+          <button class="btn btn-sm btn-primary" (click)="exportexcel()">
+            Export to Excel
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <br />
+
+  <a
+    href="http://localhost:8086/kaddem/etudiant/carteetudiant/{{
+      etudiant.idEtudiant
+    }}"
+    class="btn btn-sm btn-secondary"
+    style="margin-left: 45%"
+  >
+    Export to PDF
+  </a>
+</div>
