--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,7 +6,7 @@
 >
   <div class="scrollbar-inner">
     <!-- Brand -->
-    
+
     <div class="sidenav-header d-flex align-items-center">
       <br />
 
@@ -59,7 +59,9 @@
             <div class="collapse" id="navbar-Student">
               <ul class="nav nav-sm flex-column">
                 <li class="nav-item">
-                  <a [routerLink]="['/etudiants/EtudiantList']" class="nav-link">List Of Students</a>
+                  <a [routerLink]="['/etudiants/EtudiantList']" class="nav-link"
+                    >List Of Students</a
+                  >
                 </li>
                 <li class="nav-item">
                   <a [routerLink]="['/etudiants/FormEtudiant']" class="nav-link"
@@ -84,10 +86,12 @@
             <div class="collapse" id="navbar-Team">
               <ul class="nav nav-sm flex-column">
                 <li class="nav-item">
-                  <a href="#" class="nav-link">List Of Teams</a>
+                  <a [routerLink]="['/equipes/EquipesList']" class="nav-link"
+                    >List Of Teams</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a [routerLink]="['/app-add-projet']" class="nav-link"
+                  <a [routerLink]="['/equipes/FormEquipe']" class="nav-link"
                     >Add New Team</a
                   >
                 </li>
@@ -175,7 +179,9 @@
             <div class="collapse" id="navbar-contract">
               <ul class="nav nav-sm flex-column">
                 <li class="nav-item">
-                  <a [routerLink]="['/contracts/ContractsList']" class="nav-link"
+                  <a
+                    [routerLink]="['/contracts/ContractsList']"
+                    class="nav-link"
                     >List Of Contracts</a
                   >
                 </li>
@@ -202,12 +208,16 @@
             <div class="collapse" id="navbar-University">
               <ul class="nav nav-sm flex-column">
                 <li class="nav-item">
-                  <a [routerLink]="['/universites/universite/list']" class="nav-link"
+                  <a
+                    [routerLink]="['/universites/universite/list']"
+                    class="nav-link"
                     >List Of Universities</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a [routerLink]="['/universites/universite/add']" class="nav-link"
+                  <a
+                    [routerLink]="['/universites/universite/add']"
+                    class="nav-link"
                     >Add New University</a
                   >
                 </li>
@@ -229,10 +239,14 @@
             <div class="collapse" id="navbar-Department">
               <ul class="nav nav-sm flex-column">
                 <li class="nav-item">
-                  <a [routerLink]="['/departments/Department']" class="nav-link">List Of Departments</a>
+                  <a [routerLink]="['/departments/Department']" class="nav-link"
+                    >List Of Departments</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a [routerLink]="['/departments/Department/add']" class="nav-link"
+                  <a
+                    [routerLink]="['/departments/Department/add']"
+                    class="nav-link"
                     >Add New Department</a
                   >
                 </li>
@@ -340,7 +354,7 @@
                         class="d-flex justify-content-between align-items-center"
                       >
                         <div>
-                          <h4 class="mb-0 text-sm">Anouar Mhamdi</h4>
+                          <h4 class="mb-0 text-sm">Sadok Zied</h4>
                         </div>
                         <div class="text-right text-muted">
                           <small>2 hrs ago</small>
@@ -442,13 +456,11 @@
                 <span class="avatar avatar-sm rounded-circle">
                   <img
                     alt="Image placeholder"
-                    src="./assets/img/theme/team-1.jpg"
+                    src="./assets/img/theme/admin.jpg"
                   />
                 </span>
                 <div class="media-body ml-2 d-none d-lg-block">
-                  <span class="mb-0 text-sm font-weight-bold"
-                    >Anouar Mhamdi</span
-                  >
+                  <span class="mb-0 text-sm font-weight-bold">Sadok Zied</span>
                 </div>
               </div>
             </a>
